--- a/task1/index.html
+++ b/task1/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Task 1</title>
+</head>
+<body>
+    <div class="main_div">
+        <section class="head">
+            <div class="logo1">
+                <img src="img/logotip.png" alt="логотип сайта" class="logo">
+            </div>
+            <div class="search_line">
+                <form action="" class="flex_content" method="get">
+                    <div class="search">
+                        <input class="input" type="text" placeholder="введите текст">
+                    </div>
+                    <div class="search_button">
+                        <button class="button" name="найти" type="reset">найти</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        
+        <section class="error">
+            <h1 class="title-font">Ошибка 404. Нет такой страницы</h1>
+            <p class="font">Если вы считаете, что страници нет по нашей вине, <a href="mailto:zelenkinartjom@yandex.ru">напишите нам</a>.</p>
+        </section>
 
+        <section class="add">
+            <div class="left_column">
+                <p class="font"><img class="icon" src="img/market_new2022.svg" alt="яндекс маркет"><a href="">Маркет</a> - товары со скидкой</p>
+                <p class="font"><img class="icon" src="img/music_new.svg" alt="яндекс музыка"><a href="">Музыка</a> - музыка в хорошем качестве</p>
+                <p class="font"><img src="img/plus1.svg" alt="плюс" class="icon"><a href="">Плюс</a> - теперь для всей семьи</p>
+                <p class="font"><img src="img/kinopoisk_2021_v2.svg" alt="кинопоиск" class="icon"><a href="">Кинопоиск</a> - смотри фильмы без ограничений</p>
+            </div>
+            <dev class="right_column">
+                <p class="font"><img src="img/edadeal_new.svg" alt="едадил" class="icon"><a href="">Едадил</a> - скидки в супермаркетах</p>
+            </dev>
+        </section>
+    </div>
+
+    <footer>
+        <a class="font inf" href="">о компании</a>
+        <a class="font inf" href="">поддержка</a>
+        <a class="font inf" href="">©лосяндекс</a>
+    </footer>
+</body>
+</html>
